# viberoi

./: .env.example  .gitignore  BRD-v1.0.md  CLAUDE.md  FSD-v1.0-final.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: settings.json
.claude/rules/: security.md  structure.md
.github/workflows/: ci.yml  deploy-frontend.yml  deploy-services.yml  terraform-dev.yml
agent/: .gitignore  CLAUDE.md  go.mod
agent/cmd/viberoi-agent/: main.go
agent/pkg/config/: config.go  config_test.go
backend/lambdas/cognito_postconfirm/: CLAUDE.md  Dockerfile  pyproject.toml
backend/lambdas/cognito_postconfirm/cognito_postconfirm/: __init__.py  handler.py
backend/lambdas/cognito_postconfirm/tests/: conftest.py  test_postconfirm_handler.py
backend/lambdas/cognito_pre_token_gen/: CLAUDE.md  Dockerfile  pyproject.toml
backend/lambdas/cognito_pre_token_gen/cognito_pre_token_gen/: __init__.py  handler.py
backend/lambdas/cognito_pre_token_gen/tests/: conftest.py  test_pre_token_gen_handler.py
backend/lambdas/cognito_presignup/: CLAUDE.md  Dockerfile  pyproject.toml
backend/lambdas/cognito_presignup/cognito_presignup/: __init__.py  handler.py
backend/lambdas/cognito_presignup/tests/: conftest.py  test_presignup_handler.py
backend/lambdas/webhook_receiver/: CLAUDE.md  Dockerfile  pyproject.toml
backend/lambdas/webhook_receiver/tests/: conftest.py  test_handler.py
backend/lambdas/webhook_receiver/webhook_receiver/: __init__.py  handler.py
backend/lambdas/webhook_receiver/webhook_receiver/app/: __init__.py  lookup.py
backend/migrations/: README.md  alembic.ini  env.py  script.py.mako
backend/services/api/: CLAUDE.md  Dockerfile  pyproject.toml
backend/services/api/api/: __init__.py  main.py
backend/services/api/api/app/: auth.py  session_view.py
backend/services/api/api/routes/: developers.py  health.py  invitations.py  kpis.py  me.py  notification_channels.py  sessions.py  sprints.py  tickets.py
backend/services/api/api/schema/: responses.py
backend/services/api/tests/: conftest.py  test_api_health.py  test_dev_auth.py  test_developers_routes.py  test_kpis_routes.py  test_notification_channels_routes.py  test_sessions_routes.py  test_sprints_routes.py  test_tickets_routes.py
backend/services/ingest/: CLAUDE.md  Dockerfile  pyproject.toml
backend/services/ingest/ingest/: __init__.py  main.py
backend/services/ingest/ingest/api/: __init__.py  health.py  sessions.py
backend/services/ingest/ingest/app/: __init__.py  auth.py  store.py
backend/services/ingest/ingest/schema/: __init__.py  requests.py  responses.py
backend/services/ingest/tests/: conftest.py  test_auth.py  test_health.py  test_ingest_stub.py
backend/services/integration/: CLAUDE.md  Dockerfile  entrypoint.sh  pyproject.toml
backend/services/integration/integration/: __init__.py  main.py
backend/services/integration/integration/api/: __init__.py  health.py  integrations.py  oauth.py
backend/services/integration/integration/app/: __init__.py  auth.py  circuit_breaker.py  consumer.py  consumer_main.py  http_client.py  orchestrator.py  sync.py
backend/services/integration/integration/app/providers/: __init__.py  base.py  github.py  jira.py  linear.py  registry.py
backend/services/integration/integration/schema/: __init__.py  requests.py  responses.py
backend/services/integration/tests/: conftest.py  test_circuit_breaker.py  test_consumer.py  test_health.py  test_http_client.py  test_integrations_routes.py  test_oauth_routes.py  test_orchestrator.py  test_providers_github.py  test_providers_jira.py  test_providers_linear.py  test_rbac.py  test_sync.py
backend/services/notification/: CLAUDE.md  Dockerfile  pyproject.toml
backend/services/notification/notification/: __init__.py  main.py
backend/services/notification/notification/app/: circuit_breaker.py  consumer.py  templates.py
backend/services/notification/notification/app/handlers/: slack.py
backend/services/notification/tests/: test_circuit_breaker.py  test_consumer.py  test_slack_handler.py  test_templates.py
backend/services/worker/: CLAUDE.md  Dockerfile  pyproject.toml
backend/services/worker/tests/: conftest.py  test_attribution.py
backend/services/worker/worker/: __init__.py  main.py
backend/services/worker/worker/app/: __init__.py  attribution.py  consumer.py  processor.py  webhook_processor.py
backend/services/worker/worker/schema/: __init__.py  events.py  webhook_events.py
docs/: RESUME-LOCAL.md  RUNBOOK-DEPLOY.md  TESTING-FOLLOWUPS.md  architecture.md  contributing.md
frontend/: .env.production  .gitignore  AIInsights.tsx  AgenticInsights.tsx  AuthScreens.tsx  Billing.tsx  CLAUDE.md  GeneralMetrics.tsx  ManageTeam.tsx  MyActivity.tsx  PeoplePage.tsx  ROIView.tsx  SessionDetail.tsx  SettingsIntegrations.tsx  TeamDashboard-final.tsx  TeamDashboard.tsx  TicketDetail.tsx  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/_design/: AlertsDetail.tsx  CapacityOverview.tsx  Onboarding.tsx  SprintDetail.tsx  UnknownQueue.tsx  VibeROI-DataSource-Master-final.md
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
infra/: .gitignore  CI.md  README.md
infra/docker/: README.md
scripts/: backfill-cost.py  bootstrap-cognito-user.py  dev-down.ps1  dev-down.sh  dev-up.ps1  dev-up.sh  issue-dev-token.py  localstack-init.sh  postgres-init.sql  seed-dev-data.py  trust-policy-github-actions.json
(+138 files in other folders)
