[project]
name = "viberoi"
version = "0.1.0"
description = "VibeROI — privacy-first AI engineering ROI / observability platform (workspace root)"
requires-python = ">=3.12,<3.13"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
]

[tool.uv.workspace]
members = [
    "backend/packages/*",
    "backend/services/*",
    "backend/lambdas/*",
]

[tool.uv.sources]
viberoi-shared = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/packages", "backend/services", "backend/lambdas"]
python_files = "test_*.py"
# Default excludes integration tests (they need LocalStack).
# Run them explicitly with: uv run pytest -m integration
addopts = "-ra --strict-markers --strict-config -m 'not integration'"
markers = [
    "integration: requires LocalStack via ./scripts/dev-up (auto-skipped if down)",
]

[tool.mypy]
python_version = "3.12"
strict = false  # default for services/lambdas
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "viberoi_shared.*"
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
