[project]
name = "viberoi-cognito-postconfirm"
version = "0.1.0"
description = "Cognito PostConfirmation Lambda — provisions org + developer rows and sets custom attrs."
requires-python = ">=3.12,<3.13"
dependencies = [
    "viberoi-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cognito_postconfirm"]
