[project]
name = "viberoi-cognito-presignup"
version = "0.1.0"
description = "Cognito PreSignUp Lambda — enforces business-domain-only emails and one-org-per-domain."
requires-python = ">=3.12,<3.13"
dependencies = [
    "viberoi-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cognito_presignup"]
