[project]
name = "viberoi-webhook-receiver"
version = "0.1.0"
description = "Webhook receiver Lambda — verifies HMAC, pushes to SQS webhook_events."
requires-python = ">=3.12,<3.13"
dependencies = [
    "viberoi-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webhook_receiver"]
