[project]
name = "viberoi-api"
version = "0.1.0"
description = "API service — read-only dashboard backend; sessions, sprints, tickets, KPIs."
requires-python = ">=3.12,<3.13"
dependencies = [
    "viberoi-shared",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
