[project]
name = "viberoi-ingest"
version = "0.1.0"
description = "Ingest service — receives session push from agents, lands raw in S3."
requires-python = ">=3.12,<3.13"
dependencies = [
    "viberoi-shared",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest"]
