[project]
name = "viberoi-integration"
version = "0.1.0"
description = "Integration service — OAuth flows, external API calls, ticket/sprint sync from Jira/Linear/GitHub."
requires-python = ">=3.12,<3.13"
dependencies = [
    "viberoi-shared",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["integration"]
