[project]
name = "viberoi-notification"
version = "0.1.0"
description = "Notification service — drains notification_jobs SQS, renders templates, delivers to Slack/Teams/email."
requires-python = ">=3.12,<3.13"
dependencies = [
    "viberoi-shared",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notification"]
