[project]
name = "viberoi-worker"
version = "0.1.0"
description = "Worker service — consumes S3 events, runs attribution, persists sessions."
requires-python = ">=3.12,<3.13"
dependencies = [
    "viberoi-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
